--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "workflow-plugin-test1",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "test for workflow plugin",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "workflow",
+    "plugin",
+    "init"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/longyiyiyu/workflow-plugin-test1.git"
