--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "workflow-plugin-test1",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "test for workflow plugin",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,9 @@
   "keywords": [
     "workflow",
     "plugin",
-    "init"
+    "init",
+    "dev",
+    "build"
   ],
   "repository": {
     "type": "git",
